Add style elements to the website content

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 </head>
 <body>
     <div id="borders">
-        <div id=main_title>
+        <div id="main_title">
             <h1>Cameron Diaz</h1><hr>
         </div>
-        <div id=personal_info>
-            <p>Full name: Cameron Michelle Diaz</p>
-            <p>Date of birth: August 30th, 1972</p>
-            <p>Location: San Diego, California, United States</p>
-            <p>Height: 1.75m</p>
+        <div class="personal-info">
+            <p><strong>Full name:</strong> Cameron Michelle Diaz</p>
+            <p><strong>Date of birth:</strong> August 30th, 1972</p>
+            <p><strong>Location:</strong> San Diego, California, United States</p>
+            <p><strong>Height:</strong> 1.75m</p>
             <p>Actress since 1994 </p>
         </div>
-        <div id=body>
+        <div id="body">
             <div id="love">
                 <h2> List of Spouses :</h2>
                 <ul>
@@ -29,11 +29,11 @@
                     <li>Alex Rodriguez (2010-2011)</li>
                 </ul>
             </div>
-            <div id="bio">
+            <div class="info-blocks">
                 <h2>Biography</h2>
-                <p>A tall, strikingly attractive blue-eyed natural blonde, Cameron Diaz was born in 1972 in San Diego, the daughter of a Cuban-American father and an Anglo-German mother. Self described as "adventurous, independent and a tough kid," Cameron left home at 16 and for the next 5 years lived in such varied locales as Japan, Australia, Mexico, Morocco, and Paris. Returning to California at the age of 21, she was working as a model when she auditioned for a big part in The Mask (1994). To her amazement and despite having no previous acting experience, she was cast as the female lead in the film opposite Jim Carrey. Over the next 3 years, she honed her acting skills in such low budget independent films as The Last Supper (1995); Feeling Minnesota (1996); and Head Above Water (1996). She returned to main stream films in My Best Friend's Wedding (1997), in which she held her own against veteran actress Julia Roberts. She earned full fledged star status in 1998 for her performance in the box office smash There's Something About Mary (1998). With her name near the top on virtually every list of Hollyood's sexiest actresses, and firmly established as one of filmdom's hottest properties and most sought after actresses, Cameron Diaz appears to possess everything necessary to become one of the super stars of the new century. - IMDb Mini Biography By: Tom McDonough</p>
+                <p>A tall, strikingly attractive blue-eyed natural blonde, Cameron Diaz was born in 1972 in San Diego, the daughter of a Cuban-American father and an Anglo-German mother. Self described as "adventurous, independent and a tough kid," Cameron left home at 16 and for the next 5 years lived in such varied locales as Japan, Australia, Mexico, Morocco, and Paris. Returning to California at the age of 21, she was working as a model when she auditioned for a big part in <em>The Mask</em> (1994). To her amazement and despite having no previous acting experience, she was cast as the female lead in the film opposite Jim Carrey. Over the next 3 years, she honed her acting skills in such low budget independent films as The Last Supper (1995); <em>Feeling Minnesota</em> (1996); and <em>Head Above Water</em> (1996). She returned to main stream films in <em>My Best Friend's Wedding</em> (1997), in which she held her own against veteran actress Julia Roberts. She earned full fledged star status in 1998 for her performance in the box office smash <em>There's Something About Mary</em> (1998). With her name near the top on virtually every list of Hollyood's sexiest actresses, and firmly established as one of filmdom's hottest properties and most sought after actresses, Cameron Diaz appears to possess everything necessary to become one of the super stars of the new century. - IMDb Mini Biography By: Tom McDonough</p>
             </div>
-            <div id="facts">
+            <div class="info-blocks">
                 <h2>Notable Facts:</h2>
                 <ul>
                     <li>Actress and former model who rose to fame as a star in a series of popular movies in the 1990s</li>
@@ -41,8 +41,8 @@
                     <li>Starred in film adaptation of Charlie's Angels and its sequel, voiced Princess Fiona in the Shrek series of films</li>
                 </ul>
             </div>
-            <div id="films">
-                <h2>Notable Films:</h2>
+            <div class="info-blocks">
+                <h2>Important Films:</h2>
                 <ul>
                     <li>The Other Woman (2014)</li>
                     <li>Shrek (2001)</li>
