add more design enhancements and comments to separate the content

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <link type="text/css" rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <title>Cameron Diaz - Tribute page</title>
 </head>
 <body>
-    <div id="borders">
-        <div id="main_title">
-            <h1>Cameron Diaz</h1><hr>
+    <div>
+        <!--    A C T R E S S '   N A M E    -->
+        <div>
+            <h1>CAMERON DIAZ</h1><hr>
         </div>
+        <!--    P E R S O N A L   I N F O    -->
         <div class="personal-info">
             <p><strong>Full name:</strong> Cameron Michelle Diaz</p>
             <p><strong>Date of birth:</strong> August 30th, 1972</p>
@@ -17,8 +20,10 @@
             <p><strong>Height:</strong> 1.75m</p>
             <p>Actress since 1994 </p>
         </div>
-        <div id="body">
-            <div id="love">
+        <!--    C O N T E N T 'S   B O D Y    -->
+        <div>
+            <!--    s p o u s e s   b l o c k    -->
+            <div>
                 <h2> List of Spouses :</h2>
                 <ul>
                     <li>Carlos de la Torre (1990-1994)</li>
@@ -29,10 +34,12 @@
                     <li>Alex Rodriguez (2010-2011)</li>
                 </ul>
             </div>
+            <!--    b i o  g r a p h y   b l o c k    -->
             <div class="info-blocks">
                 <h2>Biography</h2>
                 <p>A tall, strikingly attractive blue-eyed natural blonde, Cameron Diaz was born in 1972 in San Diego, the daughter of a Cuban-American father and an Anglo-German mother. Self described as "adventurous, independent and a tough kid," Cameron left home at 16 and for the next 5 years lived in such varied locales as Japan, Australia, Mexico, Morocco, and Paris. Returning to California at the age of 21, she was working as a model when she auditioned for a big part in <em>The Mask</em> (1994). To her amazement and despite having no previous acting experience, she was cast as the female lead in the film opposite Jim Carrey. Over the next 3 years, she honed her acting skills in such low budget independent films as The Last Supper (1995); <em>Feeling Minnesota</em> (1996); and <em>Head Above Water</em> (1996). She returned to main stream films in <em>My Best Friend's Wedding</em> (1997), in which she held her own against veteran actress Julia Roberts. She earned full fledged star status in 1998 for her performance in the box office smash <em>There's Something About Mary</em> (1998). With her name near the top on virtually every list of Hollyood's sexiest actresses, and firmly established as one of filmdom's hottest properties and most sought after actresses, Cameron Diaz appears to possess everything necessary to become one of the super stars of the new century. - IMDb Mini Biography By: Tom McDonough</p>
             </div>
+            <!--    f a c t s   b l o c k    -->
             <div class="info-blocks">
                 <h2>Notable Facts:</h2>
                 <ul>
@@ -41,6 +48,7 @@
                     <li>Starred in film adaptation of Charlie's Angels and its sequel, voiced Princess Fiona in the Shrek series of films</li>
                 </ul>
             </div>
+            <!--    f i l m s   b l o c k    -->
             <div class="info-blocks">
                 <h2>Important Films:</h2>
                 <ul>
