add the footer in the page

--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="page-footer">
+            <p>Made by Gerardo P.</p>
+        </div>
+        <div class="page-footer">
+            <p>Check out the code on the this <a href="https://github.com/igerardoh/cd_tribute_page">link</a>.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
